@@ -131,6 +131,10 @@
       appropriate \code{.local()} calls with named arguments where needed.
 
       \item \code{apply(diag(3), 2:3, mean)} now gives a helpful error message.
+
+
+      \item \code{dgamma(x, shape, log=TRUE)} now longer overflows
+      to \code{Inf} for shape < 1 and very small \code{x}; \PR{Jonathan Rougier
     }
   }
 }
